--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@mdxeditor/editor": "^3.20.0",
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -8,6 +10,7 @@
     "@radix-ui/react-toast": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cm6-theme-basic-dark": "^0.2.0",
     "lucide-react": "^0.473.0",
     "next": "^15.1.5",
     "next-auth": "^5.0.0-beta.25",
@@ -21,6 +24,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
@@ -30,7 +34,7 @@
     "typescript": "^5.7.3"
   },
   "name": "nextjs-15",
-  "packageManager": "pnpm@9.15.0",
+  "packageManager": "pnpm@9.15.4",
   "private": true,
   "scripts": {
     "biome": "biome check --write .",
